# miniclr

./: CMakeLists.txt  LICENSE  README.md  licenseheader.txt
src/: CMakeLists.txt  cmakeconfig.h.in  config.h  tarray.h
src/cross/private/windows/: directory.cpp  file.cpp  path.cpp
src/cross/public/: directory.h  file.h  path.h
src/main/: CMakeLists.txt  main.cpp
src/metadata/: type.cpp
src/mini/private/cil/: Code.h  Instruction.h  OpCode.h  OpCodes.cpp  OpCodes.h
src/mini/private/metadata/: CodeIndex.h  ElementType.h  GuidHeap.h  MetadataToken.h  PdbHeap.h  UserStringHeap.cpp  UserStringHeap.h  Utilities.cpp  Utilities.h  heap.h  stringheap.cpp  stringheap.h  tableheap.h  tokentype.h
src/mini/private/pe/: DataDirectory.h  Image.h  ImageReader.cpp  ImageReader.h  Section.h  ceeloader.cpp  peh.h
src/type_system/: type.cpp
src/vm/: loader.cpp  loader.h
src/vm/private/: ceeloader.cpp  loader.cpp
src/vm/public/: ceeloader.h  loader.h
